<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient"
    tools:context=".login.activities.RegisterActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        app:srcCompat="@drawable/register"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_username"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="216dp"
        android:hint="@string/usr_input"
        android:textColorHint="@color/hintColor"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/username"
            android:layout_width="256dp"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/text_input_layout_username"
            android:inputType="text"
            android:textColor="@color/whiteSmoke" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="298dp"
        android:hint="@string/usr_pass"
        android:textColorHint="@color/hintColor"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/password"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_input_layout_password"
            android:inputType="textPassword"
            android:textColor="@color/whiteSmoke" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="126dp"
        app:cardCornerRadius="25dp">


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ripple_sign_in"
            android:onClick="handleClickRegister"
            android:text="@string/btn_register"
            android:textColor="@color/whiteSmoke" />

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="234dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="556dp"
        android:layout_marginBottom="78dp"
        android:text="@string/login_label"
        android:textAlignment="center"
        android:textColor="@color/whiteSmoke" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="27dp"
        app:cardCornerRadius="25dp">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ripple_register"
            android:onClick="handleLoginClick"
            android:text="@string/btn_login"
            android:textColor="@color/whiteSmoke" />


    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_confirm"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="377dp"
        android:hint="@string/confirm_label"
        android:textColorHint="@color/hintColor"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="256dp"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/text_input_layout_username"
            android:inputType="textPassword"
            android:textColor="@color/whiteSmoke" />

    </android.support.design.widget.TextInputLayout>

</android.widget.RelativeLayout>