<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".contacts.UpdateContact">

    <android.support.design.widget.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:textColorHint="@color/hintColor"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/first_name_update"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textNoSuggestions"
            android:hint="@string/update_contact_first_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="325dp"
        android:textColorHint="@color/hintColor"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/second_name_update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textNoSuggestions"
            android:hint="@string/update_contact_second_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="425dp"
        android:textColorHint="@color/hintColor"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/phone_number_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:hint="@string/update_contact_phone_number" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/ripple_sign_in"
        android:text="@string/button_update"
        android:textColor="@color/whiteSmoke" />

    <ImageView
        android:id="@+id/imageViewUpdate"
        android:layout_width="wrap_content"
        android:layout_height="123dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="78dp"
        android:src="@drawable/user" />

</RelativeLayout>