<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient"
    tools:context=".login.activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        app:srcCompat="@drawable/avatar"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_username"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="274dp"
        android:hint="@string/usr_input"
        android:textColorHint="@color/hintColor"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/username"
            android:layout_width="256dp"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/text_input_layout_username"
            android:inputType="text"
            android:textColor="@color/whiteSmoke" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="352dp"
        android:hint="@string/usr_pass"
        android:textColorHint="@color/hintColor"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/password"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_input_layout_password"
            android:inputType="textPassword"
            android:textColor="@color/whiteSmoke" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="160dp"
        app:cardCornerRadius="25dp">


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ripple_sign_in"
            android:onClick="handleLogin"
            android:text="@string/btn_login"
            android:textColor="@color/whiteSmoke" />

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="237dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="531dp"
        android:layout_marginBottom="107dp"
        android:text="@string/register_label"
        android:textAlignment="center"
        android:textColor="@color/whiteSmoke" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="55dp"
        app:cardCornerRadius="25dp">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ripple_register"
            android:onClick="handleRegisterClick"
            android:text="@string/btn_register"
            android:textColor="@color/whiteSmoke" />


    </android.support.v7.widget.CardView>

</android.widget.RelativeLayout>