<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/riple_item">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="87dp"
            android:layout_height="83dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="7dp"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/first_name"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="46dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/last_name"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/first_name"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="132dp"
            android:layout_marginTop="13dp"
            android:text="@string/first_name" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView4"
            android:layout_alignBottom="@+id/last_name"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/last_name" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginStart="2dp"
            android:layout_marginTop="80dp"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/first_name"
            android:layout_alignTop="@+id/textView8"
            android:layout_marginStart="25dp"
            android:layout_marginTop="-1dp"
            android:text="075386148"
            android:textColor="@android:color/black" />

    </RelativeLayout>

</LinearLayout>